--- a/public/admintemplate/assets/css/material-kit.css
+++ b/public/admintemplate/assets/css/material-kit.css
@@ -22773,7 +22773,7 @@ label,
 }
 
 .bg-gradient-dark {
-  background-image: linear-gradient(195deg, #42424a 0%, #191919 100%);
+  /* background-image: linear-gradient(195deg, #42424a 0%, #191919 100%); */
 }
 
 .bg-gradient-faded-primary {
